[gd_scene load_steps=2 format=2]

[ext_resource path="res://Data/Scenes/Systems/PlayerCreation.gd" type="Script" id=1]

[node name="PlayerCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="playerStats" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_right = -160.0
size_flags_vertical = 3
alignment = 1

[node name="Name" type="Label" parent="playerStats"]
margin_top = 16.0
margin_right = 320.0
margin_bottom = 30.0
size_flags_vertical = 1
text = "Nome:"
align = 1
valign = 1

[node name="nomeInput" type="LineEdit" parent="playerStats"]
margin_top = 34.0
margin_right = 320.0
margin_bottom = 58.0
align = 1

[node name="HSeparator" type="HSeparator" parent="playerStats"]
margin_top = 62.0
margin_right = 320.0
margin_bottom = 66.0

[node name="Points" type="Label" parent="playerStats"]
margin_top = 70.0
margin_right = 320.0
margin_bottom = 84.0
text = "POINTS PLACEHOLDER"

[node name="HSeparator2" type="HSeparator" parent="playerStats"]
margin_top = 88.0
margin_right = 320.0
margin_bottom = 92.0

[node name="MaxHP" type="Label" parent="playerStats"]
margin_top = 96.0
margin_right = 320.0
margin_bottom = 110.0
size_flags_vertical = 1
text = "Max HP"
valign = 1

[node name="maxhealth" type="HSlider" parent="playerStats"]
margin_top = 114.0
margin_right = 320.0
margin_bottom = 130.0
min_value = 1.0
max_value = 20.0
value = 10.0

[node name="Strength" type="Label" parent="playerStats"]
margin_top = 134.0
margin_right = 320.0
margin_bottom = 148.0
size_flags_vertical = 1
text = "Strength"
valign = 1

[node name="str" type="HSlider" parent="playerStats"]
margin_top = 152.0
margin_right = 320.0
margin_bottom = 168.0
min_value = 1.0
max_value = 20.0
value = 10.0

[node name="Intelligence" type="Label" parent="playerStats"]
margin_top = 172.0
margin_right = 320.0
margin_bottom = 186.0
size_flags_vertical = 1
text = "Intelligence"
valign = 1

[node name="int" type="HSlider" parent="playerStats"]
margin_top = 190.0
margin_right = 320.0
margin_bottom = 206.0
min_value = 1.0
max_value = 20.0
value = 10.0

[node name="Dexterity" type="Label" parent="playerStats"]
margin_top = 210.0
margin_right = 320.0
margin_bottom = 224.0
size_flags_vertical = 1
text = "Dexterity"
valign = 1

[node name="dex" type="HSlider" parent="playerStats"]
margin_top = 228.0
margin_right = 320.0
margin_bottom = 244.0
min_value = 1.0
max_value = 20.0
value = 10.0

[node name="Luck" type="Label" parent="playerStats"]
margin_top = 248.0
margin_right = 320.0
margin_bottom = 262.0
size_flags_vertical = 1
text = "Luck"
valign = 1

[node name="luk" type="HSlider" parent="playerStats"]
margin_top = 266.0
margin_right = 320.0
margin_bottom = 282.0
min_value = 1.0
max_value = 20.0
value = 10.0

[node name="Wisdom" type="Label" parent="playerStats"]
margin_top = 286.0
margin_right = 320.0
margin_bottom = 300.0
size_flags_vertical = 1
text = "Wisdom"
valign = 1

[node name="wis" type="HSlider" parent="playerStats"]
margin_top = 304.0
margin_right = 320.0
margin_bottom = 320.0
min_value = 1.0
max_value = 20.0
value = 10.0

[node name="Button" type="Button" parent="playerStats"]
margin_top = 324.0
margin_right = 320.0
margin_bottom = 344.0
text = "Criar Personagem"

[connection signal="pressed" from="playerStats/Button" to="." method="_on_Button_pressed"]
